# paranoid-deobfuscator

./: .coveragerc  .gitignore  LICENSE  README.md  deobfuscator.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml
.github/workflows/: run_tests.yml  stale.yml
deobfuscator-helper/: .gitignore  generate.sh  manifest.mf
deobfuscator-helper/me/hexile/paranoid/deobfuscator/: Main.java
deobfuscator-helper/src/me/hexile/paranoid/deobfuscator/: Main.java
paranoid_deobfuscator/: __init__.py  __main__.py  constants.py  deobfuscator.py  encoding.py  paranoid.py
paranoid_deobfuscator/commands/: deobfuscate.py  helpers.py
paranoid_deobfuscator/paranoid/: DeobfuscatorHelper.py  RandomHelper.py  __init__.py  utils.py
paranoid_deobfuscator/smali/: __init__.py  instructions.py  register.py
tests/: test_encoding.py  test_issue18.py  test_paranoid.py  test_smali.py
