[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".github",
]

[project]
name = "paranoid-deobfuscator"
version = "2.0.0"
authors = [
  { name="Giacomo Ferretti", email="giacomo.ferretti.00@gmail.com" },
]
description = "Deobfuscate \"paranoid\" protected apps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "numpy>=1.26.0"
]

[project.urls]
"Homepage" = "https://github.com/giacomoferretti/paranoid-deobfuscator"
"Bug Tracker" = "https://github.com/giacomoferretti/paranoid-deobfuscator/issues"