[tool.poetry]
name = "paranoid-deobfuscator"
version = "3.0.2"
description = "Deobfuscate \"paranoid\" obfuscated apps"
authors = ["Giacomo Ferretti <giacomo.ferretti.00@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/giacomoferretti/paranoid-deobfuscator"
packages = [{ include = "paranoid_deobfuscator" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/giacomoferretti/paranoid-deobfuscator/issues"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
numpy = "^2.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[tool.poetry.scripts]
paranoid-deobfuscator = "paranoid_deobfuscator.__main__:cli"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.pytest.ini_options]
addopts = "--cov=paranoid_deobfuscator --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
